/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Rey Ruiz
 */
package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

public class DisplayAll_ItemsController {
    @FXML
    public void allItems(ActionEvent actionEvent) {
        /*
         *   When the user presses the 'Display' button
         * all items will be displayed.
         * */
    }
}
