/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Rey Ruiz
 */
package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayCompletedItemsController {
    public void completedItems(ActionEvent actionEvent) {
        /*
         *   When the user presses the 'Display' button
         * all the completed items will be displayed.
         * */
    }
}
