/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Rey Ruiz
 */
package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayIncompleteItemsController {
    public void incompleteItems(ActionEvent actionEvent) {
        /*
        *   When the user presses the 'Display' button
        * all the incomplete items will be displayed.
        * */
    }
}
