/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Rey Ruiz
 */
package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

public class ItemsEditorController {
    @FXML
    public void changeDueDate(ActionEvent actionEvent) {
        /*
        *   This method allows the user to change the due date of
        * and item.
        */
    }

    @FXML
    public void getDescription(ActionEvent actionEvent) {
        /*
        *   This method will show the user the old
        * description.
        * */
    }

    @FXML
    public void editDescription(ActionEvent actionEvent) {
        /*
        *   This method will allow the user to edit an items' description.
        */

    }
}
